--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <title>TBS INFO</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter%3A400"/>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro%3A400"/>
+  <link rel="stylesheet" href="./styles/tbs-info.css"/>
+</head>
+<body>
+<div class="tbs-info-iXx">
+  <div class="auto-group-wbaw-UvS">
+    <img class="tbs-info-2023-white-1-Yop" src="./assets/tbs-info-2023-white-1.png"/>
+  </div>
+  <div class="tbs-info-qY2">TBS INFO</div>
+</div>
+</body>
