--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="TBS-Online-Website/favicon.ico" />
+  <link rel="icon" href="https://raw.githubusercontent.com/KevinPfeiffer/TBS-Online-Website/main/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <title>TBS INFO</title>
