--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="https://raw.githubusercontent.com/KevinPfeiffer/TBS-Online-Website/main/favicon.ico" />
+  <link rel="shortcut icon" href="https://static.wikia.nocookie.net/fake-channels/images/4/4a/Site-favicon.ico/revision/latest?cb=20220414064352" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <title>TBS INFO</title>
