--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="https://static.wikia.nocookie.net/fake-channels/images/4/4a/Site-favicon.ico/revision/latest?cb=20220414064352" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <title>TBS INFO</title>
+  <meta name="theme-color" content="#8C8C8C" />
+  <title>TBS Online</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter%3A400"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro%3A400"/>
   <link rel="stylesheet" href="./styles/tbs-info.css"/>
@@ -13,7 +13,7 @@
 <body>
 <div class="tbs-info-iXx">
   <div class="auto-group-wbaw-UvS">
-    <img class="tbs-info-2023-white-1-Yop" src="./assets/tbs-info-2023-white-1.png"/>
+    <img class="tbs-info-2023-white-1-Yop" src="https://www.tvchannellists.com/wiki/images/a/af/TBS_Info_white.svg"/>
   </div>
   <div class="tbs-info-qY2">TBS INFO</div>
 </div>
