--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <div class="tbs-info-iXx">
   <div class="auto-group-wbaw-UvS">
-    <img class="tbs-info-2023-white-1-Yop" src="https://www.tvchannellists.com/wiki/images/a/af/TBS_Info_white.svg"/>
+    <img class="tbs-info-2023-white-1-Yop" src="https://www.tvchannellists.com/wiki/images/a/af/TBS_Info_white.svg" width="50" height="19"/>
   </div>
   <div class="tbs-info-qY2">TBS INFO</div>
 </div>
