--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="https://static.wikia.nocookie.net/fake-channels/images/4/4a/Site-favicon.ico/revision/latest?cb=20220414064352" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#8C8C8C" />
+  <meta name="theme-color" content="#8c8c8c" />
   <title>TBS Online</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter%3A400"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro%3A400"/>
-  <link rel="stylesheet" href="./styles/tbs-info.css"/>
+  <link rel="stylesheet" href="./tbs-info.css"/>
 </head>
 <body>
 <div class="tbs-info-iXx">
