--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>TBS Online</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter%3A400"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro%3A400"/>
-  <link rel="stylesheet" href="./tbs-info.css"/>
+  <link rel="stylesheet" href="./index.css"/>
 </head>
 <body>
 <div class="tbs-info-iXx">
