--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="https://static.wikia.nocookie.net/fake-channels/images/4/4a/Site-favicon.ico/revision/latest?cb=20220414064352" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#8c8c8c" />
+  <meta name="theme-color" content="#000000" />
   <title>TBS Online</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter%3A400"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro%3A400"/>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa%3A400"/>
   <link rel="stylesheet" href="index.css"/>
 </head>
 <body>
+<div class="group-eXx">
+ <div class="text-AmC">Welcome to</div>
+ <img class="image-nna" src="https://www.tvchannellists.com/wiki/images/3/31/TBS_Online.svg" width="500" height="140"/>
+</div>
 <div class="tbs-info-iXx">
   <div class="auto-group-wbaw-UvS">
     <img class="image" src="https://www.tvchannellists.com/wiki/images/a/af/TBS_Info_white.svg" width="50" height="19"/>
