--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <div class="group-eXx">
- <div class="text-AmC">Welcome to</div>
+ <div class="text-big">Welcome to</div>
  <img class="image-nna" src="https://www.tvchannellists.com/wiki/images/3/31/TBS_Online.svg" width="500" height="140"/>
 </div>
 <div class="tbs-info-iXx">
