--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
   <link rel="stylesheet" href="index.css"/>
 </head>
 <body>
-<div class="group-eXx">
- <div class="text-big">Welcome to</div>
- <img class="image-nna" src="https://www.tvchannellists.com/wiki/images/3/31/TBS_Online.svg" width="500" height="140"/>
-</div>
-<div class="tbs-info-iXx">
-  <div class="auto-group-wbaw-UvS">
-    <img class="image" src="https://www.tvchannellists.com/wiki/images/a/af/TBS_Info_white.svg" width="50" height="19"/>
+<div class="tbs-online-WxE">
+  <div class="group-eXx">
+    <div class="text-big">Welcome to</div>
+    <img class="image-nna" src="https://www.tvchannellists.com/wiki/images/3/31/TBS_Online.svg" width="500" height="140"/>
   </div>
-  <div class="tbs-info-qY2">TBS INFO</div>
+  <div class="tbs-info-iXx">
+    <div class="auto-group-wbaw-UvS">
+      <img class="image" src="https://www.tvchannellists.com/wiki/images/a/af/TBS_Info_white.svg" width="50" height="19"/>
+    </div>
+    <div class="tbs-info-qY2">TBS INFO</div>
+  </div>
 </div>
 </body>
