--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <div class="text-big">Welcome to</div>
     <img class="image-nna" src="https://www.tvchannellists.com/wiki/images/3/31/TBS_Online.svg" width="500" height="140"/>
   </div>
-  <div class="tbs-info-iXx">
-    <div class="auto-group-wbaw-UvS">
+  <div class="infocard">
+    <div class="infocard-bg-tbsinfo">
       <img class="image" src="https://www.tvchannellists.com/wiki/images/a/af/TBS_Info_white.svg" width="50" height="19"/>
     </div>
-    <div class="tbs-info-qY2">TBS INFO</div>
+    <div class="shorttxt">TBS INFO</div>
   </div>
 </div>
 </body>
