--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="https://static.wikia.nocookie.net/fake-channels/images/4/4a/Site-favicon.ico/revision/latest?cb=20220414064352" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#dddddd" />
+  <meta name="theme-color" content="#000000" />
   <title>TBS Online</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter%3A400"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro%3A400"/>
