--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 <div class="tbs-online-WxE">
   <div class="text-big">Welcome to</div>
   <img class="image-nna" src="https://www.tvchannellists.com/wiki/images/3/31/TBS_Online.svg" width="500" height="140"/>
-  <div class="infocard">
+  <div class="infocard-tbsinfo">
     <div class="infocard-bg-tbsinfo">
-      <img class="image" src="https://www.tvchannellists.com/wiki/images/a/af/TBS_Info_white.svg" width="50" height="19"/>
+      <img class="image-tbsinfo" src="https://www.tvchannellists.com/wiki/images/a/af/TBS_Info_white.svg" width="50" height="19"/>
     </div>
-    <div class="shorttxt">TBS INFO</div>
+    <div class="shorttxt-tbsinfo">TBS INFO</div>
   </div>
-    <div class="infocard">
+    <div class="infocard-tbsnow">
     <div class="infocard-bg-tbsnow">
-      <img class="image" src="https://www.tvchannellists.com/wiki/images/7/7f/TBS_Now_white.svg" width="50" height="18"/>
+      <img class="image-tbsnow" src="https://www.tvchannellists.com/wiki/images/7/7f/TBS_Now_white.svg" width="50" height="18"/>
     </div>
-    <div class="shorttxt">TBS NOW</div>
+    <div class="shorttxt-tbsnow">TBS NOW</div>
   </div>
 </div>
 </body>
